# kernel

./: .gitignore  .licenserc.yaml  .yamlfmt  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_zh.md  Dockerfile  README.md  README_zh.md  common_crate_rustflags.gni
adapter/cmsis/: BUILD.gn
adapter/cmsis/cmsis_header/: BUILD.gn
adapter/cmsis/cmsis_header/RTOS1/: cmsis_os.h
adapter/cmsis/cmsis_header/RTOS2/: cmsis_os2.h
adapter/cmsis/src/: common_objects.rs  lib.rs  uart.rs  validation.checker  validation.rs
adapter/cmsis/src/os1/: mod.rs  semaphore.rs  tick.rs  timer.rs
adapter/cmsis/src/os2/: delay.rs  event_flags.rs  kernel.rs  mempool.rs  mod.rs  mqueue.rs  mutex.rs  semaphore.rs  thread.rs  tick.rs  timer.rs
adapter/common/: BUILD.gn
adapter/common/src/: lib.rs  mempool.rs
adapter/esp_radio_sys/: BUILD.gn
adapter/esp_radio_sys/src/: lib.rs
adapter/thread_metric/: BUILD.gn  README.md  tm_case.gni
adapter/thread_metric/src/: lib.rs  main.rs
adapter/thread_metric/tests/: tm_basic_process_test.checker  tm_cooperative_scheduling_test.checker  tm_interrupt_processing_test.checker  tm_memory_allocation_test.checker  tm_preemptive_scheduling_test.checker
arch/: BUILD.gn  Kconfig
arch/arm/aarch64/: Kconfig  context.rs  exception.rs  irq.rs  mmu.rs  mod.rs  vector.rs
arch/arm/aarch64/registers/: cntp_tval_el0.rs  hcr_el2.rs  mod.rs
arch/arm/aarch64/virt/: mod.rs  vector.rs
arch/arm/arm64/: Kconfig
arch/arm/cortex-m/scripts/: bluekernel.x  generate_linker.py
arch/arm/cortex_m/: Kconfig  asm.rs  boot.S  boot.rs  context.rs  exception.rs  hardfault.rs  irq.rs  link.ld  link.x  linker.x  mod.rs  mpu.rs  nvic.rs  scb.rs  systick.rs  xpsr.rs
arch/riscv/: Kconfig  context.rs  link.x  mod.rs  trap.rs
arch/src/: interface.rs  lib.rs
arch/src/riscv/: mod.rs  trap.rs
benchmark/: BUILD.gn
benchmark/thread_metric/: .gitignore  rtt_tm.diff  run_test.py
bkapi/: BUILD.gn
blueos_boards/: BUILD.gn
blueos_boards/src/: lib.rs
blueos_boards/src/gd32e507_eval/: config.rs  mod.rs
blueos_boards/src/gd32vw553_eval/: mod.rs
blueos_boards/src/qemu_mps2_an385/: config.rs
blueos_boards/src/qemu_mps3_an547/: config.rs  mod.rs
blueos_boards/src/qemu_riscv64/: config.rs
blueos_boards/src/qemu_virt64_aarch64/: config.rs  link.x
blueos_boards/src/raspberry_pico2_cortexm/: Kconfig  mod.rs
blueos_boards/src/rk3568/: config.rs  link.x
blueos_boards/src/seeed_xiao_esp32c3/: config.rs  mod.rs
driver/: BUILD.gn
driver/src/: lib.rs  static_ref.rs
driver/src/clock_control/: mod.rs
driver/src/clock_control/esp32_clock_control/: mod.rs
driver/src/clock_control/gd32_clock_control/: mod.rs  rcu.rs
driver/src/clock_control/rpi_pico/: clocks.rs  mod.rs  pll.rs  reset.rs  xosc.rs
driver/src/gpio/: esp32_gpio.rs  mod.rs
driver/src/hwinfo/: esp32c3.rs  mod.rs
driver/src/interrupt_controller/: esp32_intc.rs  mod.rs
driver/src/pinctrl/: esp32_pinctrl.rs  gd32_af.rs  gd32_afio.rs  mod.rs  rpi_pico.rs
driver/src/power/: esp32c3_power_domain.rs  mod.rs
driver/src/reset/: gd32_reset.rs  mod.rs  rpi_pico_reset.rs
driver/src/rng/: esp32c3_rng.rs  mod.rs
driver/src/spi/: esp32_spi2.rs  mod.rs
driver/src/systimer/: esp32_sys_timer.rs  mod.rs
driver/src/uart/: arm_pl011.rs  cmsdk.rs  dumb.rs  esp32_uart.rs  esp32_usb_serial.rs  gd32e5x_uart.rs  mod.rs  ns16550a.rs  ns16650.rs  ns16x50.rs
driver/src/uart/gd32vw55x/: mod.rs
kconfig/: BUILD.gn
kconfig/config/: Kconfig  Kconfig.test
kconfig/config/gd32e507_eval/debug/: defconfig
kconfig/config/gd32e507_eval/release/: defconfig
kconfig/config/gd32vw507_eval/release/: defconfig
kconfig/config/gd32vw553_eval/coverage/: defconfig
kconfig/config/gd32vw553_eval/debug/: defconfig
kconfig/config/gd32vw553_eval/release/: defconfig
kconfig/config/newlib_mps3_an547/debug/: defconfig
kconfig/config/newlib_mps3_an547/release/: defconfig
kconfig/config/qemu_mps2_an385/coverage/: defconfig
kconfig/config/qemu_mps2_an385/debug/: defconfig
kconfig/config/qemu_mps2_an385/release/: defconfig
kconfig/src/: generate_artifacts.py  generate_c_header.py  generate_configs.py  generate_rustflags_file.py  menuconfig.py  parse_const.py  parse_rustflags.py
kernel/: BUILD.gn  TODO
kernel/src/: Kconfig  boot.rs  config.rs  console.rs  coverage.checker  error.rs  ffi.rs  irq.rs  lib.rs  logger.rs  mm.rs  support.rs  time.rs  types.rs  unittests.checker
kernel/src/allocator/: Kconfig  block.rs  mod.rs
kernel/src/arch/: mod.rs
kernel/src/asynk/: channel.rs  mod.rs
kernel/src/boards/: mod.rs
kernel/src/coredump/: Kconfig  README.md  arch.rs  backend.rs  elf.rs  mod.rs  notes.rs  regions.rs  signal.rs
kernel/src/devices/: Kconfig  clock.rs  console.rs  dumb.rs  framebuffer.rs  mod.rs  null.rs  virtio.rs  zero.rs
kernel/src/drivers/: mod.rs  msip.rs
kernel/src/net/: Kconfig  connection.rs  connection_err.rs  error.rs  iface_list.rs  mod.rs  net_manager.rs  port_generator.rs  syscalls.rs  types.rs
kernel/src/process/: elf.rs  first_process.rs  loader.rs  mod.rs  vm.rs
kernel/src/scheduler/: Kconfig  global_scheduler.rs  idle.rs  mod.rs  wait_queue.rs
kernel/src/signal/: mod.rs  syscall.rs
kernel/src/sync/: atomic_wait.rs  barrier.rs  delay.rs  event_flags.rs  mod.rs  mqueue.rs  mutex.rs  posix_mqueue.rs  semaphore.rs  spinlock.rs
kernel/src/syscall_handlers/: mod.rs  posix_timers.rs
kernel/src/thread/: builder.rs  mod.rs
kernel/src/time/: mod.rs  timer.rs  timer_manager.rs
kernel/src/tracing/: buffer.rs  control.rs  dump.rs  event.rs  mod.rs
kernel/src/vfs/: Kconfig  dcache.rs  dirent.rs  fatfs.rs  fd_manager.rs  file.rs  inode.rs  mod.rs  mount.rs  path.rs  sockfs.rs  syscalls.rs  tmpfs.rs  utils.rs
kernel/tests/: coredump.checker  coredump_test.rs  integration_aarch64.checker  integration_test.rs  test_futex.rs  test_process.rs  test_tracing.rs  test_vfs.rs
kernel/tests/net/: net_utils.rs  test_smoltcp.rs  test_socket_icmp.rs  test_socket_tcp.rs  test_socket_udp.rs  test_virtio_net.rs
loader/tests/integration_test/: BUILD.gn
test_harness/: BUILD.gn
test_harness/src/: lib.rs
(+310 files in other folders)
