# Copyright (c) 2026 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/build_template.gni")
import("//build/toolchain/blueos.gni")

build_rust("bluekernel_arch") {
  sources = [ "src/lib.rs" ]
  deps = [
    "//external/vendor/cortex-m-0.7.7:cortex_m",
    "//kernel/hal:blueos_hal",
    "//kernel/kconfig:blueos_kconfig",
    "//kernel/kconfig:generate_rustflags_file",
  ]
  if (rust_abi_target == "aarch64-unknown-none") {
    deps += [
      "//external/vendor/arm-gic-0.4.0:arm_gic",
      "//external/vendor/spin-0.9.8:spin",
      "//external/vendor/tock-registers-0.9.0:tock_registers",
    ]
  }
  configs += [ "//kernel/kconfig:kconfigs" ]
}
