# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# ...

import("//build/templates/build_template.gni")
import("//build/toolchain/blueos.gni")

build_rust("arch_crate") {
  crate_type = "rlib"
  crate_name = "arch_crate"
  sources = [ "src/lib.rs" ]
  edition = "2021"
  deps = [
    "//external/vendor/cortex-m-0.7.7:cortex_m",
    "//external/vendor/tock-registers-0.9.0:tock_registers",
    "//kernel/core_traits",
    "//kernel/hal:blueos_hal",
    "//kernel/kconfig:blueos_kconfig",
  ]
  configs += [
    "//kernel/kconfig:kconfigs",
    "//build/boards/${board}:kernel_config",
  ]
  cfgs = [ "${build_type}" ]
}
