# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/build_template.gni")
import("//build/toolchain/blueos.gni")

build_rust("blueos_boards") {
  crate_type = "rlib"
  sources = [ "src/lib.rs" ]
  edition = "2021"
  deps = [
    "//kernel/blueos_arch",
    "//kernel/driver:blueos_driver",
    "//kernel/hal:blueos_hal",
    "//kernel/kconfig:blueos_kconfig",
    "//kernel/kconfig:generate_rustflags_file",
  ]
  proc_macro_deps = [
    "//kernel/macro:blueos_macro",
    "//external/vendor/paste-1.0.15:paste",
  ]
  rustenv = [ "TARGET_BOARD=${board}" ]
  cfgs = [ "${build_type}" ]
  configs += [
    "//kernel/kconfig:kconfigs",
    "//build/boards/${board}:kernel_config",
  ]
}