# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/build_template.gni")
import("//build/toolchain/blueos.gni")

build_rust("blueos_driver") {
  sources = [ "src/lib.rs" ]
  deps = [
    "//external/vendor/bitflags-2.10.0:bitflags",
    "//external/vendor/cfg-if-1.0.4:cfg_if",
    "//external/vendor/safe-mmio-0.2.5:safe_mmio",
    "//external/vendor/tock-registers-0.9.0:tock_registers",
    "//external/vendor/zerocopy-0.8.27:zerocopy",
    "//kernel/hal:blueos_hal",
  ]
  if (board == "gd32vw553") {
    deps += [ "//external/nuclei-sdk" ]
  } else if (board == "gd32e507") {
    deps += [ "//external/vendor/gd32e5-0.9.1:gd32e5" ]
  }
  features = []
  rustflags = [
    "--cfg",
    "target_board=\"${board}\"",
    "--cfg",
    "target_chip=\"${chip}\""
  ]
}
