# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/boards/${board}.gni")
import("//build/templates/build_template.gni")
import("//build/toolchain/blueos.gni")

_kernel_default_cfgs = [
  "scheduler=\"global\"",
  "${build_type}",
]

group("check_kernel") {
  testonly = true
  deps = [
    ":run_integration_test",
    ":run_unittest",
  ]
}

group("check_kernel_by_clippy") {
  testonly = true
  deps = [
    ":blueos_clippy",
    ":kernel_integration_test_clippy",
    ":kernel_unittest_clippy",
  ]
}

group("check_kernel_probe") {
  testonly = true
  deps = [ ":run_unittest" ]
}

_shared_deps = [
  ":atomic",
  "//external/bitflags/v2.9.0:bitflags",
  "//external/cfg-if/v1.0.0:cfg_if",
  "//external/const-default/v1.0.0:const_default",
  "//external/embedded-io/v0.6.1:embedded_io",
  "//external/heapless/v0.8.0:heapless",
  "//external/log/v0.4.22:log",
  "//external/rust-fatfs/v0.4:fatfs",
  "//external/safe-mmio/v0.2.5:safe_mmio",
  "//external/spin/v0.9.8:spin",
  "//external/thiserror/v2.0.9:thiserror",
  "//external/tock-registers/v0.9.0:tock_registers",
  "//external/zerocopy/v0.8.25:zerocopy",
  "//kernel/driver:blueos_driver",
  "//kernel/hal:blueos_hal",
  "//kernel/header:blueos_header",
  "//kernel/infra:blueos_infra",
  "//kernel/kconfig:blueos_kconfig",
  "//libc",
]
_shared_deps += board_deps

if (coverage || profile) {
  _shared_deps += [
    "//external/minicov/v0.3.7:minicov",
    "//external/semihosting/v0.1.20:semihosting",
  ]
}

build_rust("kernel_unittest") {
  testonly = true
  crate_name = "kernel_unittest"
  crate_type = "bin"
  sources = [ "src/lib.rs" ]
  edition = "2021"
  proc_macro_deps = [
    "//external/paste/v1.0.15:paste",
    "//external/rust-delegate/v0.13.3:delegate",
    "//kernel/macro:blueos_macro",
    "//kernel/test_harness:blueos_test_macro",
  ]
  cfgs = _kernel_default_cfgs
  deps = _shared_deps
  deps += [ "//external/semihosting/v0.1.20:semihosting" ]
  configs += [
    "//kernel/kconfig:kconfigs",
    "//build/boards/${board}:kernel_config",
  ]
  rustflags = [
    "--test",
    "-Zpanic-abort-tests",
  ]
}

run_clippy("kernel_unittest_clippy") {
  testonly = true
  deps = [ ":kernel_unittest" ]
}

build_rust("kernel_integration_test") {
  testonly = true
  crate_type = "bin"
  sources = [ "tests/integration_test.rs" ]
  edition = "2021"
  proc_macro_deps = [ "//kernel/test_harness:blueos_test_macro" ]
  deps = [
           ":blueos",
           "//external/byteorder/v1.5.0:byteorder",
           "//external/semihosting/v0.1.20:semihosting",
           "//kernel/rsrt",
           "//kernel/scal:blueos_scal",
           "//libc",
         ] + board_deps
  if (coverage || profile) {
    deps += [ "//external/minicov/v0.3.7:minicov" ]
  }
  cfgs = _kernel_default_cfgs
  configs += [
    "//kernel/kconfig:kconfigs",
    "//build/boards/${board}:kernel_config",
  ]
  rustflags = [
    "--test",
    "-Zpanic-abort-tests",
  ]
}

run_clippy("kernel_integration_test_clippy") {
  testonly = true
  deps = [ ":kernel_integration_test" ]
}

build_rust("blueos") {
  crate_type = "rlib"
  sources = [ "src/lib.rs" ]
  edition = "2021"
  proc_macro_deps = [
    "//external/paste/v1.0.15:paste",
    "//external/rust-delegate/v0.13.3:delegate",
    "//kernel/macro:blueos_macro",
  ]
  cfgs = _kernel_default_cfgs
  deps = _shared_deps
  configs += [
    "//kernel/kconfig:kconfigs",
    "//build/boards/${board}:kernel_config",
  ]
}

run_clippy("blueos_clippy") {
  deps = [ ":blueos" ]
}

cbindgen("rust_wrapper") {
  sources = [ "cbindgen.toml" ]
  args = [
           "--quiet",
           "-c",
         ] + rebase_path([ "cbindgen.toml" ], root_build_dir) +
         rebase_path([ "." ], root_build_dir)
}

gen_qemu_runner("integration_test_runner") {
  testonly = true
  semihosting = true
  img = ":kernel_integration_test"
  qemu = qemu_exe
  machine = machine
  qemu_args = qemu_extra_args
  net_args = qemu_net_args
  block_img = "integration_test_block.img"
  block_args = qemu_block_args
}

run_qemu_check("run_integration_test") {
  testonly = true
  runner = ":integration_test_runner"
  if (coverage) {
    img = ":kernel_integration_test"
    checker = "src/coverage.checker"
  } else {
    checker = "tests/integration.checker"
  }
}

if (defined(use_defmt) && use_defmt) {
  gen_probe_runner("unittest_runner") {
    testonly = true
    img = ":kernel_unittest"
    chip = "$chip"
  }
} else {
  gen_qemu_runner("unittest_runner") {
    testonly = true
    img = ":kernel_unittest"
    qemu = "$qemu_exe"
    machine = "$machine"
    qemu_args = qemu_extra_args
    block_img = "unittest_block.img"
    block_args = qemu_block_args
    semihosting = true
  }
}

run_qemu_check("run_unittest") {
  testonly = true
  runner = ":unittest_runner"
  if (coverage) {
    img = ":kernel_unittest"
    checker = "src/coverage.checker"
  } else {
    checker = "src/unittests.checker"
  }
}

static_library("atomic") {
  sources = [ "src/sync/libatomic/atomic.c" ]
}
