# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/build_template.gni")

build_rust("blueos_test_macro") {
  testonly = true
  crate_type = "proc-macro"
  sources = [ "src/lib.rs" ]
  edition = "2021"
  public_deps = [
    "//external/vendor/semihosting-0.1.20:semihosting(${default_toolchain})",
  ]
  deps = [
    "//external/vendor/proc-macro2-1.0.103:proc_macro2",
    "//external/vendor/quote-1.0.41:quote",
    "//external/vendor/syn-2.0.108:syn",
  ]
}
